Curso CPTS y enlaces obsidian

--- a/Apuntes/2. Enumeración/10249,10250,10256 - Kubernetes API.md
+++ b/Apuntes/2. Enumeración/10249,10250,10256 - Kubernetes API.md
@@ -1,3 +1,5 @@
+[[Apuntes]]
+
 Si te encuentras los puertos 10249, 102450 y 10256 y el servicio pone --> InfluxDB API seguramente te estés enfrentando al nodo princial de kubernetes el API Server que es llamado Kubelet.
 
 ## Enumeración con kubeletctl
