--- a/Apuntes/2. Enumeración/2049 - NFS.md
+++ b/Apuntes/2. Enumeración/2049 - NFS.md
@@ -1,3 +1,4 @@
+[[Apuntes]]
 ## ¿Qué es y cómo funciona?
 
 Es un sistema cliente/servidor que permite que los usuarios accedan a través de una red y tratarlos como si residieran en nuestra máquina local. Tiene el mismo propósito que SMB pero no puede comunicarse con SMB.
