--- a/Apuntes/2. Enumeración/27017,27020 - MongoDB.md
+++ b/Apuntes/2. Enumeración/27017,27020 - MongoDB.md
@@ -1,3 +1,4 @@
+[[Apuntes]]
 MongoDB es una base de datos de documentos que ofrece una gran escalabilidad y flexibilidad, y un modelo de consultas e indexación avanzado.
 
 ## Reconocimiento
